Add approve tx, add an untested lock tx

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-node-modules
+node_modules
+*.DS_Store
+*.map
 src/json/ethereum-config.json
 src/json/near-config.json
 testing-bridge.code-workspace
-dist/*
+build/*
